# starcitizen-freight

./: .env.example  Cargo.toml  README.md  SPEC.md
docs/plans/: 2026-04-17-web-ui.md
src/: api.rs  calculation.rs  cli.rs  error.rs  main.rs  models.rs  web_server.rs  web_ui.rs
src/web/: app.js  index.html  styles.css
