[package]
name = "starcitizen-freight"
version = "0.1.0"
edition = "2021"
description = "Dead-simple Star Citizen cargo profit calculator"
license = "MIT"
repository = "https://github.com/Jind0la/starcitizen-freight"
authors = ["Jind0la"]

[[bin]]
name = "freight"
path = "src/main.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web UI embedding
rust-embed = "8"
mime_guess = "2"

# CLI / TUI
ratatui = "0.28"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Web server
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower = "0.5"
http = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
